--- a/src/app/utilities/variables.scss
+++ b/src/app/utilities/variables.scss
@@ -1,3 +1,7 @@
 $black      : #000;
 $white      : #fff;
-$onyx_grey  : #353935
+$onyx_grey  : #353935;
+$neptune    : #8CB9BD;
+$old_lace   : #FEFBF6;
+$porche     : #ECB159;
+$santa_fe   : #B67352;
