--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -1,3 +1,4 @@
+@import "../utilities/variables.scss";
 * {
   box-sizing: border-box;
   padding: 0;
@@ -12,6 +13,7 @@ a {
 body{
   margin: 0 160px;
   position: relative;
+  background-color: $neptune;
 }
 
 
