--- a/src/app/[locale]/components/navbar/index.scss
+++ b/src/app/[locale]/components/navbar/index.scss
@@ -1,19 +1,37 @@
 @import "../../../utilities/variables.scss";
 
 .navbar{
-  padding: 1rem 0rem;
+  color: $old_lace;
+  padding: 14px 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
   top: 0;
-  .navbar-list{
-    width: 100%;
+  left: 0;
+  width: 100%; 
+  .navbar-container{
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     align-items: center;
-    list-style-type: none;
-    .list-item{
-      .icon{
-        border: 1px solid yellow;
-        margin-right: 2rem;
+    width: 80%;
+    justify-content: space-between;
+    .logo{
+      margin-right: 0%;
+    }
+    .navbar-list{
+      width: max-content;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 3rem;
+      align-items: center;
+      list-style-type: none;
+      .list-item{
+        .item{
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 24px;
+        }
       }
     }
   }
