--- a/src/app/[locale]/components/navbar/index.scss
+++ b/src/app/[locale]/components/navbar/index.scss
@@ -10,6 +10,7 @@
   top: 0;
   left: 0;
   width: 100%; 
+  background-color: $neptune;
   .navbar-container{
     display: flex;
     align-items: center;
