--- a/src/app/[locale]/components/footer/index.scss
+++ b/src/app/[locale]/components/footer/index.scss
@@ -1,9 +1,93 @@
 @import "../../../utilities/variables.scss";
 
-.footer-design{
-    border: 1px solid $black;
+.yokse{
+  background-color: $neptune_variable;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  .reserved{
+    position: absolute;
+    bottom: 10px;
+    font-weight: 600;
+    font-size: 18px;
+  }
+  .footer-design {
+    height: 70%;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 1rem 0rem;
+
+  .logo {
+    height: 50%;
+    padding-right: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .socials {
+      margin-top: 2rem;
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      gap: 1rem;
+    }
+  }
+
+  .menu {
+    border-right: 2px solid black;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 50%;
+    padding-top: .5rem;
+
+    .list-item {
+      list-style-type: none;
+
+      .item {
+        font-size: 18px;
+        font-weight: 600;
+        text-align: center;
+      }
+    }
+  }
+
+  .info {
+    padding-top: .5rem;
+    border-right: 2px solid black;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 50%;
+
+    .text {
+      font-size: 18px;
+      font-weight: 600;
+      text-align: left;
+    }
+  }
+  .policies{
+    padding-top: .5rem;
+    list-style-type: none;
+    padding-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+    gap: 1rem;
+    .list-item{
+      .item {
+        font-size: 18px;
+        font-weight: 600;
+        text-align: center;
+      }
+    }
+  }
+}
 }
