--- a/src/app/[locale]/components/navbar/index.scss
+++ b/src/app/[locale]/components/navbar/index.scss
@@ -11,6 +11,7 @@
   left: 0;
   width: 100%; 
   background-color: $neptune;
+  z-index: 1;
   .navbar-container{
     display: flex;
     align-items: center;
