Fix: Add page to blog

--- a/src/app/[locale]/blog/[slug]/page.scss
+++ b/src/app/[locale]/blog/[slug]/page.scss
@@ -3,8 +3,7 @@ p{
 }
 .post-container {
 	width: 85%;
-	margin: 0 auto;
-	margin-top: 2rem;
+	margin: 2rem auto;
 
 	.margin-top-bottom-4 {
 		margin: 4rem 0rem;
