--- a/src/app/[locale]/blog/page.scss
+++ b/src/app/[locale]/blog/page.scss
@@ -6,7 +6,7 @@
     .articles-container{
         width: 90%;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: space-around;
         flex-wrap: wrap;
         gap: 2rem;
