--- a/src/app/[locale]/components/cards/index.scss
+++ b/src/app/[locale]/components/cards/index.scss
@@ -4,3 +4,10 @@
     justify-content: space-between;
     width: 100%;
 }
+
+@media (max-width:744px){
+    .cards-container{
+       flex-direction: column;
+       gap: 1rem;
+    }
+}
