--- a/src/app/[locale]/components/footer/index.scss
+++ b/src/app/[locale]/components/footer/index.scss
@@ -19,6 +19,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    width: 80%;
 
   .logo {
     height: 50%;
@@ -26,26 +27,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    .socials {
-      margin-top: 2rem;
-      width: 100%;
-      display: flex;
-      justify-content: space-around;
-      gap: 1rem;
+  }
 
-    }
+  .socials {
+    display: flex;
+    flex-direction: column;
+    padding-left: 4rem;
+    height: 60%;
+    gap: .5rem;
   }
 
   .menu {
     border-right: 2px solid black;
-    padding-right: 2rem;
-    padding-left: 2rem;
+    padding-right: 4rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    height: 50%;
+    height: 60%;
     padding-top: .5rem;
-
+    
     .list-item {
       list-style-type: none;
 
@@ -62,13 +62,12 @@
 
   .info {
     padding-top: .5rem;
-    border-right: 2px solid black;
     padding-right: 2rem;
     padding-left: 2rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    height: 50%;
+    height: 60%;
 
     .text {
       font-size: 18px;
@@ -76,22 +75,18 @@
       text-align: left;
     }
   }
-  .policies{
-    padding-top: .5rem;
-    list-style-type: none;
-    padding-left: 2rem;
-    display: flex;
-    flex-direction: column;
-    height: 50%;
-    gap: 1rem;
-    .list-item{
-      .item {
-        font-size: 18px;
-        font-weight: 600;
-        text-align: center;
-        &:hover{
-          color: #8CB9BD;
-        }
+}
+.policies{
+  list-style-type: none;
+  display: flex;
+  gap: 1rem;
+  .list-item{
+    .item {
+      font-size: 18px;
+      font-weight: 600;
+      text-align: center;
+      &:hover{
+        color: #8CB9BD;
       }
     }
   }
