--- a/src/app/[locale]/components/footer/index.scss
+++ b/src/app/[locale]/components/footer/index.scss
@@ -2,7 +2,8 @@
 
 .footer-container{
   background-color: $neptune_variable;
-
+  border: 1px solid red;
+  height: 450px;
   display: flex;
   flex-direction: column;
   align-items: center;
