--- a/src/app/[locale]/components/button/index.scss
+++ b/src/app/[locale]/components/button/index.scss
@@ -18,6 +18,7 @@
   .button-text {
     position: relative;
     z-index: 2;
+    color: #0C0C0C;
   }
 
   .fill-container {
@@ -27,18 +28,20 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: $neptune_variable;
+    background-color: #0C0C0C;
     transform: translate(-50%, -50%) scale(0);
     transition: transform 1s cubic-bezier(0.25, 1, 0.5, 1);
     z-index: 1;
   }
 
   &:hover {
-    color: $old_lace;
     transform: translateY(-4px);
-
+    .button-text{
+      color: $old_lace;
+    }
     .fill-container {
       transform: translate(-50%, -50%) scale(50);
+      color: $old_lace;
     }
   }
 
