--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  color: $old_lace;
 }
 
 a {
@@ -12,10 +13,9 @@ a {
 
 body{
   margin: 0 160px;
-  padding-top: 144px;
   position: relative;
   overflow-x:hidden;
-  background-color: $neptune;
+  background-color: #0C0C0C;
 }
 
 
