--- a/src/app/[locale]/components/carousel/index.scss
+++ b/src/app/[locale]/components/carousel/index.scss
@@ -4,12 +4,16 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  height: 500px;
+  height: 600px;
   gap: 100px;
   .slick-list {  
     height: 100%;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
     .slick-track {
-      height: 100%;
+      height: 95%;
       .slick-slide {
         width: 220px;
         height: 100%;
@@ -26,7 +30,7 @@
         
         >div {
           height: 100%;
-          .x {
+          .card {
             height: 100%;
             border-radius: 0.5rem;
             transition: 0.5s ease-in-out;
@@ -81,5 +85,11 @@
         }
       }
     }
+  }
+}
+
+@media (max-width:390px){
+  .container{
+    width: 85%;
   }
 }
