--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -1,8 +1,8 @@
 @import "../utilities/variables.scss";
 
 .home-design {
-  .what-we-offer-section {
-    margin:3rem 0rem;
+  .what-we-offer-section, .project-section {
+    margin:4rem 0rem;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -13,5 +13,6 @@
       margin-bottom: 1.5rem;
     }
   }
+
 
 }
