--- a/src/app/utilities/variables.scss
+++ b/src/app/utilities/variables.scss
@@ -1,4 +1,5 @@
 $black               : #000;
+$cod_gray            : #0C0C0C;
 $white               : #fff;
 $onyx_grey           : #353935;
 $neptune             : #8CB9BD;
