--- a/src/app/[locale]/components/cards/index.scss
+++ b/src/app/[locale]/components/cards/index.scss
@@ -7,7 +7,18 @@
 
 @media (max-width:744px){
     .cards-container{
-       flex-direction: column;
-       gap: 1rem;
+        align-items: center;
+        justify-content: center;
+        .slider{
+            width: 100%;
+        }
     }
 }
+@media (max-width:390px){
+    .cards-container{
+      width: 85%;
+      .slider{
+        width: 100%;
+    }
+    }
+  }
