Fix: svg contact

--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -1,7 +1,7 @@
 @import "../utilities/variables.scss";
 
 .home-design {
-  .what-we-offer-section, .project-section {
+  .what-we-offer-section, .project-section, .testimonials, .contact {
     margin:4rem 0rem;
     display: flex;
     align-items: center;
