--- a/src/app/[locale]/components/contact/index.scss
+++ b/src/app/[locale]/components/contact/index.scss
@@ -2,9 +2,41 @@
 
 .contact-design{
   display: flex;
-  flex-direction: row-reverse;
-  justify-content:center;
+  flex-direction: row;
+  justify-content:space-around;
   align-items: center;
+  width: 100%;
+  .contact-left-container{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .contact-text{
+        width: 90%;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19.30px;
+        display: block;
+    }
+    .img-container{
+        width: 100%;
+        svg{
+          width: 100%;
+          margin-top: 2rem;
+            #envelope {
+                animation: float 2s ease-in-out infinite;
+              }
+            #star1, #star2, #star3, #star4, #star5, #star6 {
+              animation: blink 1s ease-in-out infinite;
+            }
+            #star2 { animation-delay: 100ms; }
+            #star3 { animation-delay: 500ms; }
+            #star4 { animation-delay: 700ms; }
+            #star5 { animation-delay: 300ms; }
+            #star6 { animation-delay: 200ms }
+        }
+    }
+  }
   .contact-form{
       padding: 2rem;
       border: 1px solid $onyx_grey;
@@ -62,3 +94,30 @@
       }
   }
 }
+
+
+
+
+  @keyframes float {
+    0% {
+      transform: translateY(0px);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+    100% {
+      transform: translateY(0px);
+    }
+  }
+
+  @keyframes blink {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: .5;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
