--- a/src/app/[locale]/components/contact/index.scss
+++ b/src/app/[locale]/components/contact/index.scss
@@ -1,123 +1,204 @@
 @import "../../../utilities/variables.scss";
 
-.contact-design{
+.contact-design {
   display: flex;
   flex-direction: row;
-  justify-content:space-around;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
-  .contact-left-container{
+
+  .contact-left-container {
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    .contact-text{
-        width: 90%;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 19.30px;
-        display: block;
+
+    .contact-text {
+      width: 90%;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 19.30px;
+      display: block;
     }
-    .img-container{
+
+    .img-container {
+      width: 100%;
+
+      svg {
         width: 100%;
-        svg{
-          width: 100%;
-          margin-top: 2rem;
-            #envelope {
-                animation: float 2s ease-in-out infinite;
-              }
-            #star1, #star2, #star3, #star4, #star5, #star6 {
-              animation: blink 1s ease-in-out infinite;
-            }
-            #star2 { animation-delay: 100ms; }
-            #star3 { animation-delay: 500ms; }
-            #star4 { animation-delay: 700ms; }
-            #star5 { animation-delay: 300ms; }
-            #star6 { animation-delay: 200ms }
+        margin-top: 2rem;
+
+        #envelope {
+          animation: float 2s ease-in-out infinite;
         }
+
+        #star1,
+        #star2,
+        #star3,
+        #star4,
+        #star5,
+        #star6 {
+          animation: blink 1s ease-in-out infinite;
+        }
+
+        #star2 {
+          animation-delay: 100ms;
+        }
+
+        #star3 {
+          animation-delay: 500ms;
+        }
+
+        #star4 {
+          animation-delay: 700ms;
+        }
+
+        #star5 {
+          animation-delay: 300ms;
+        }
+
+        #star6 {
+          animation-delay: 200ms
+        }
+      }
     }
   }
-  .contact-form{
-      padding: 2rem;
-      border: 1px solid $onyx_grey;
-      position: relative;
-      padding-left: 3rem;
-      min-width: 30%;
-      .text, .subtitle{
-          color: $onyx_grey;
-          font-size: 1.5rem;
-      }
-      .subtitle{
-        margin-bottom: 1rem;
-      }
-      .form{
-          display: flex;
-          flex-direction: column;
-          gap: 1rem;
-          .form-label{
-              display: flex;
-              justify-content: space-between;
-              flex-direction: column;
-              .input{
-                  all: unset;
-                  border-bottom: 1px solid $onyx_grey;
-                  width: 50%;
-              }
-              .textarea{
-                  width: 90%;
-                  border: 1px solid $onyx_grey;
-              }
+
+  .contact-form {
+    padding: 2rem;
+    position: relative;
+    padding-left: 3rem;
+    min-width: 30%;
+
+    .subtitle {
+      color: $old_lace;
+      font-size: 24px;
+      font-weight: 800;
+      line-height: 24px;
+      margin-bottom: 1rem;
+    }
+
+    .form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .form-label {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        &:focus-within{
+          .name, .email, .message{
+            color: white;
           }
-      }
-      .button{
-          width: 50%;
-      }
-  }
-}
-
-
-@media (max-width:1024px){
-  .contact-us{
-      .contact-form{
-          width: 50%;
-      }
-  }
-}
-
-@media (max-width:425px){
-  .contact-us{
-      .contact-form{
-          width: 90%;
-          .svg-contact-us{
-              right: -20px;
+          .input{
+            border: 1px solid white;
           }
+        }
+        
+        .name,
+        .email,
+        .message {
+          font-size: 12px;
+          font-weight: 600;
+          text-transform: uppercase;
+          color: #fefbf641;
+          transition: color 1s ease;
+        }
+        
+        .input {
+          all: unset;
+          border: 1px solid #fefbf64b;
+          border-radius: 8px;
+          width: 335px;
+          margin-top: .5rem;
+          padding: 8px 16px;
+          text-align: left;
+          height: 24px;
+          transition: border 1s ease;
+          
+          &::-webkit-input-placeholder{
+            color: #fefbf641;
+            transition: color 1s ease;
+            text-align: center;
+          }
+        }
+
+        .textarea {
+          resize: none;
+          outline: none;
+        }
+        &:hover{
+          .name, .email, .message{
+            color: $old_lace;
+          }
+          .input{
+            border: 1px solid $old_lace;
+            &::-webkit-input-placeholder{
+              color: $old_lace;
+              text-align: center;
+            }
+          }
+        }      
+        
       }
+    }
+
+    .button {
+      width: 50%;
+      color: black;
+    }
+  }
+}
+
+
+@media (max-width:1024px) {
+  .contact-us {
+    .contact-form {
+      width: 50%;
+    }
+  }
+}
+
+@media (max-width:425px) {
+  .contact-us {
+    .contact-form {
+      width: 90%;
+
+      .svg-contact-us {
+        right: -20px;
+      }
+    }
   }
 }
 
 
 
 
-  @keyframes float {
-    0% {
-      transform: translateY(0px);
-    }
-    50% {
-      transform: translateY(-20px);
-    }
-    100% {
-      transform: translateY(0px);
-    }
+@keyframes float {
+  0% {
+    transform: translateY(0px);
   }
 
-  @keyframes blink {
-    0% {
-      opacity: 0;
-    }
-    50% {
-      opacity: .5;
-    }
-    100% {
-      opacity: 1;
-    }
+  50% {
+    transform: translateY(-20px);
   }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: .5;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
