--- a/src/app/[locale]/components/navbar/index.scss
+++ b/src/app/[locale]/components/navbar/index.scss
@@ -12,7 +12,12 @@
   width: 100%; 
   z-index: 1;
   background-color: transparent;
-  background-color: #0C0C0C;
+  &.scrolled{
+    background-color: #0C0C0C;
+  }
+  &.mobile{
+    background-color: #0C0C0C;
+  }
   
   .navbar-container{
     display: flex;
@@ -27,10 +32,13 @@
       display: flex;
       flex-direction: row;
       justify-content: center;
-      gap: 3rem;
+      gap: 1.5rem;
       align-items: center;
       list-style-type: none;
       .list-item{
+        display: flex;
+        align-items: center;
+        cursor: pointer;
         .item{
           font-weight: 500;
           font-size: 16px;
