--- a/src/app/[locale]/contact-us/page.scss
+++ b/src/app/[locale]/contact-us/page.scss
@@ -1,9 +1,85 @@
 @import "../../utilities/variables.scss";
 
 .contact-us-design{
+  position: relative;
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    .title{
+      position: absolute;
+      top: 15%;
+    }
+    .container-image{
+        width: 80%;
+        height: 100%;
+        margin-left: -160px;
+        background-image: url("../../../static//media/io.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 0% 500px 0% 0%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .contact-container{
+          border: 1px solid red;
+          width: 550px;
+          height: 284px;
+          border-radius: 20px;
+          margin-top: 15rem;
+        }
+    }
+    .container-text{
+      width: 50%;
+      padding-left: 1rem;
+      display: flex;
+      flex-direction: column;
+      .profile-data{
+        margin-bottom: 2rem;
+        .name{
+          font-size: 49px;
+          font-weight: 700;
+          margin-bottom: .5rem;
+        }
+        .profession{
+          font-weight: 800;
+          font-size: 24px;
+          margin-bottom: 1rem;
+        }
+        .desc{
+          font-size: 16px;
+          font-weight: 300;
+        }
+      }
+      .services-data{
+        >h3 {
+          font-weight: 600;
+          font-size: 18px;
+        }
+        >p{
+          font-size: 16px;
+          font-weight: 300;
+          margin-bottom: 1rem;
+        }
+      }
+    }
 }
+
+@media (max-width:744px){
+    .contact-us-design{
+        flex-direction: column;
+        .container-image{
+            margin-left: -32px;
+        }
+    }
+  }
+  @media (max-width:390px){
+    .contact-us-design{
+        .container-image{
+            margin-left: -16px;
+        }
+    }
+  }
+  
