Fix translations contact page

--- a/src/app/[locale]/contact-us/page.scss
+++ b/src/app/[locale]/contact-us/page.scss
@@ -42,6 +42,7 @@
           font-size: 49px;
           font-weight: 700;
           margin-bottom: .5rem;
+          text-transform: uppercase;
         }
         .profession{
           font-weight: 800;
