--- a/src/app/utilities/variables.scss
+++ b/src/app/utilities/variables.scss
@@ -7,3 +7,4 @@ $neptune_variable    : #26666B;
 $old_lace            : #FEFBF6;
 $porche              : #ECB159;
 $santa_fe            : #B67352;
+$orange_variant      : #BB4C34
