Fix: contact mobile

--- a/src/app/[locale]/components/cards/index.scss
+++ b/src/app/[locale]/components/cards/index.scss
@@ -10,6 +10,7 @@
     .cards-container{
         align-items: center;
         justify-content: center;
+        margin-top: 2rem;
         .slider{
             width: 100%;
         }
