--- a/src/app/[locale]/components/contact/index.scss
+++ b/src/app/[locale]/components/contact/index.scss
@@ -63,120 +63,10 @@
       }
     }
   }
-
-  // .contact-form {
-  //   padding: 2rem;
-  //   position: relative;
-  //   padding-left: 3rem;
-  //   min-width: 30%;
-
-  //   .subtitle {
-  //     color: $old_lace;
-  //     font-size: 24px;
-  //     font-weight: 800;
-  //     line-height: 24px;
-  //     margin-bottom: 1rem;
-  //   }
-
-  //   .form {
-  //     display: flex;
-  //     flex-direction: column;
-  //     align-items: flex-end;
-  //     gap: 1rem;
-
-  //     .form-label {
-  //       display: flex;
-  //       justify-content: space-between;
-  //       flex-direction: column;
-  //       &:focus-within{
-  //         .name, .email, .message{
-  //           color: white;
-  //         }
-  //         .input{
-  //           border: 1px solid white;
-  //         }
-  //       }
-        
-  //       .name,
-  //       .email,
-  //       .message {
-  //         font-size: 12px;
-  //         font-weight: 600;
-  //         text-transform: uppercase;
-  //         color: #fefbf641;
-  //         transition: color 1s ease;
-  //       }
-        
-  //       .input {
-  //         all: unset;
-  //         border: 1px solid #fefbf64b;
-  //         border-radius: 8px;
-  //         width: 335px;
-  //         margin-top: .5rem;
-  //         padding: 8px 16px;
-  //         text-align: left;
-  //         height: 24px;
-  //         transition: border 1s ease;
-          
-  //         &::-webkit-input-placeholder{
-  //           color: #fefbf641;
-  //           transition: color 1s ease;
-  //           text-align: center;
-  //         }
-  //       }
-
-  //       .textarea {
-  //         resize: none;
-  //         outline: none;
-  //       }
-  //       &:hover{
-  //         .name, .email, .message{
-  //           color: $old_lace;
-  //         }
-  //         .input{
-  //           border: 1px solid $old_lace;
-  //           &::-webkit-input-placeholder{
-  //             color: $old_lace;
-  //             text-align: center;
-  //           }
-  //         }
-  //       }      
-        
-  //     }
-  //   }
-
-  //   .form-button {
-  //     all: unset;
-  //     display: none;
-  //     width: 25%;
-  //     border: 1px solid $old_lace ;
-  //     color: $old_lace;
-  //     padding: 8px 16px;
-  //     border-radius: 8px;
-  //     text-align: center;
-  //     font-size: 18px;
-  //     font-weight: 600;
-  //     background-color: $cod_gray;
-  //     transition: color 1s ease;
-  //     &:hover{
-  //       background-color: $old_lace;
-  //       color: $cod_gray;
-  //       border: 1px solid #0c0c0c46;
-  //     }
-  //     &.confirmation-sent{
-  //       background-color: $neptune_variable ;
-  //       border: 1px solid $neptune_variable;
-  //     }
-  //     &.enabled{
-  //       transition: display 1s ease;
-  //       display: block;
-  //     }
-  //   }
-  // }
 }
 
 
-@media (max-width:390px) {
+@media (max-width:744px) {
   .contact-design{
     flex-direction: column;
     .contact-left-container{
@@ -188,21 +78,21 @@
       .img-container{
         display: none;
       }
-    }
-    // .contact-form{
-    //   padding:0;
-    //   margin-top: 2rem;
-    //   .subtitle{
-    //     display: none;
-    //   }
-    //   .form{
-    //     align-items: center;
-    //   }
-    // }
-    
+    }    
   }
 }
 
+@media (max-width:390px) {
+ .contact-design{
+  .contact-left-container{
+    .contact-text{
+      font-size: 16px;
+      font-weight: 400;
+      margin-top: 1rem;
+    }
+  }
+ }
+}
 
 
 
