--- a/src/app/[locale]/components/qr-code/index.scss
+++ b/src/app/[locale]/components/qr-code/index.scss
@@ -43,6 +43,7 @@
         .title{
             font-size: 24px;
             font-weight: 800;
+            margin-bottom: 2rem;
         }
         .qr-code-container{
             flex-direction: column;
