--- a/src/app/[locale]/components/contact/form/index.scss
+++ b/src/app/[locale]/components/contact/form/index.scss
@@ -119,6 +119,11 @@
         }
         .form{
           align-items: center;
+          .form-label{
+            .input{
+              width: 280px;
+            }
+          }
         }
       }
   }
