--- a/src/app/[locale]/components/hero/index.scss
+++ b/src/app/[locale]/components/hero/index.scss
@@ -54,6 +54,7 @@
     .text{
       width: 90%;
       .slogan{
+        text-align: center;
         font-size: 12px ;
         font-weight: 500;
       }
