--- a/src/app/[locale]/components/footer/index.scss
+++ b/src/app/[locale]/components/footer/index.scss
@@ -27,6 +27,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    .website-name{
+      width: 60%;
+      text-align: center;
+      font-size: 20px;
+      font-weight: 600;
+    }
   }
 
   .socials {
@@ -35,8 +41,6 @@
     padding-left: 4rem;
     height: 60%;
     gap: .5rem;
-    .social1{
-    }
   }
 
   .menu {
@@ -109,7 +113,7 @@
     .logo {
       width: 100%;
       display: flex;
-      flex-direction: row;
+      align-items: flex-start;
       padding: 0rem;      
     }    
     .socials {
