Fix border cards & qr-code title mobile

--- a/src/app/[locale]/components/cards/card/index.scss
+++ b/src/app/[locale]/components/cards/card/index.scss
@@ -4,7 +4,7 @@
   width: 358px;
   height: 500px;
   border-radius: 20px;
-  border: 2px solid $old_lace ;
+  border: 2px solid #fefbf6b7 ;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
