Fix: remove author name mobile

--- a/src/app/[locale]/components/testimonials/index.scss
+++ b/src/app/[locale]/components/testimonials/index.scss
@@ -133,6 +133,11 @@
         .selectors{
           justify-content: center;
         }
+        .review{
+          .author-name{
+            display: none;
+          }
+        }
       }
     }
   }
