Feat: Add dynamic button to article to switch to a new article

--- a/src/app/[locale]/blog/[slug]/page.scss
+++ b/src/app/[locale]/blog/[slug]/page.scss
@@ -24,6 +24,11 @@ p{
 		justify-content: center;
 		gap: 4rem;
 	}
+	.buttons{
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+	}
 }
 
 @media (max-width:744px){
