Feat: add internal link to qr code article

--- a/src/app/[locale]/blog/[slug]/page.scss
+++ b/src/app/[locale]/blog/[slug]/page.scss
@@ -29,6 +29,13 @@ p{
 		display: flex;
 		justify-content: space-between;
 	}
+	.call-to-action{
+		text-decoration: underline;
+		margin-bottom: 2rem;
+		.text{
+			text-transform: uppercase;
+		}
+	}
 }
 
 @media (max-width:744px){
