--- a/src/app/[locale]/blog/[slug]/page.scss
+++ b/src/app/[locale]/blog/[slug]/page.scss
@@ -37,9 +37,12 @@ p {
     text-decoration: underline;
     margin-bottom: 2rem;
     margin-top: 2rem;
-
+    &:hover{
+      color:#8CB9BD;
+    }
     .text {
       text-transform: uppercase;
+      color: #8CB9BD;
     }
   }
 
