--- a/src/app/[locale]/components/footer/index.scss
+++ b/src/app/[locale]/components/footer/index.scss
@@ -104,6 +104,9 @@
 	.footer-container{
     height: max-content;
     padding: 2rem 0rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     .footer-design {
       height: 100%;
       flex-direction: column;
@@ -111,46 +114,56 @@
       gap: 1rem;
   
     .logo {
-      width: 100%;
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       padding: 0rem;      
+      width: 50%;
+      order: 1;
+      .img{
+        display: none;
+      }
+      .website-name{
+        font-size: 20px;
+        font-weight: 600;
+      }
     }    
     .socials {
       flex-direction: row;
+      justify-content: center;
       width: 100%;
       padding-left: 0rem;
+      margin: 1rem 0rem;
+      order: 2;
+      gap: 2rem;
     }
     .menu {
-      width: 100%;
-      border-right: none;
-      .list-item{
-        .item{
-          font-size: 16px;
-          font-weight: 400;
-        }
-      }
+      display: none;
     }
   
     .info {
       width: 100%;
-      padding-left: 0rem;
+      padding: 0rem;
+      align-items: center;
+      order: 3;
+      margin-bottom: 3rem;
   
       .text {
-        font-size: 16px;
-        font-weight: 400;
+        font-size: 18px;
+        font-weight: 600;
         text-align: left;
       }
     }
 
   }
   .policies{
-    margin: 1rem 0rem;
     width: 80%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
     .list-item{
       .item{
-        font-size: 16px;
-        font-weight: 400;
+        font-size: 18px;
+        font-weight: 600;
       }
     }
     }
@@ -158,6 +171,40 @@
       width: 80%;
       font-size: 12px;
       position: static;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 16px;
+      font-weight: 600;
     }
 }
+}
+
+@media (max-width:390px){
+  .footer-container{
+    .footer-design{
+      .logo{
+        .website-name{
+          width: 80%;
+        }
+      }
+      .info{
+        .street{
+          display: none;
+        }
+      }
+    }
+    .policies{
+      width: 100%;
+      .list-item{
+        .item{
+          font-size: 16px;
+        }
+      }
+    }
+    .reserved{
+      font-size: 14px;
+      width: 100%;
+    }
+  }
 }
